--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_FIREBASE_MEASUREMENT_ID = G-QZGY3GW58W
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID = 476464804852
 REACT_APP_FIREBASE_PROJECT_ID = daycare-a6fe2
 REACT_APP_FIREBASE_STORAGE_BUCKET = daycare-a6fe2.appspot.com
+CI=false
