--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,24 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
+    - name: Deploy React App
+      uses: ./github/actions/react-deploy
       with:
         node-version: 16  # Use the appropriate version for your project
+        s3-bucket: waitlist-bucket
+    # - name: Install Dependencies
+    #   run: npm install
 
-    - name: Install Dependencies
-      run: npm install
+    # - name: Build React App
+    #   run: npm run build
 
-    - name: Build React App
-      run: npm run build
-
-    - name: Deploy to S3
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: "us-east-1"  # Replace with your region
-      run: |
-        aws s3 sync build/ s3://waitlist-bucket --delete
+    # - name: Deploy to S3
+    #   env:
+        # AWS_ACCESS_KEY_ID: 
+        # AWS_SECRET_ACCESS_KEY: 
+    #     AWS_REGION: "us-east-1"  # Replace with your region
+    #   run: |
+    #     aws s3 sync build/ s3://waitlist-bucket --delete
