--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Deploy React App
-      uses: ./github/actions/react-deploy
+      uses: ./github/actions/react-deploy/action.yml
       with:
         node-version: 16  # Use the appropriate version for your project
         s3-bucket: waitlist-bucket
