--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Deploy React App
-      uses: ./github/actions/react-deploy/action.yml
+      uses: ./.github/actions/react-deploy
       with:
         node-version: 16  # Use the appropriate version for your project
         s3-bucket: waitlist-bucket
