--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,16 +18,9 @@ jobs:
       with:
         node-version: 16  # Use the appropriate version for your project
         s3-bucket: waitlist-bucket
-    # - name: Install Dependencies
-    #   run: npm install
-
-    # - name: Build React App
-    #   run: npm run build
-
-    # - name: Deploy to S3
-    #   env:
-        # AWS_ACCESS_KEY_ID: 
-        # AWS_SECRET_ACCESS_KEY: 
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     #     AWS_REGION: "us-east-1"  # Replace with your region
     #   run: |
     #     aws s3 sync build/ s3://waitlist-bucket --delete
