--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,11 @@ jobs:
       uses: ./.github/actions/react-deploy
       with:
         node-version: 16  # Use the appropriate version for your project
-        s3-bucket: waitlist-bucket
+        s3-bucket: "waitlist-bucket"
       env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: "us-east-1"
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: "us-east-1"
     #     AWS_REGION: "us-east-1"  # Replace with your region
     #   run: |
     #     aws s3 sync build/ s3://waitlist-bucket --delete
