--- a/.github/actions/react-deploy/action.yml
+++ b/.github/actions/react-deploy/action.yml
@@ -8,10 +8,10 @@ inputs:
   s3-bucket:
     description: The s3 bucket name to deploy the App
     required: true
-  AWS_ACCESS_KEY_ID:
+  aws-access-key-id:
     description: AWS Access Key ID
     required: true
-  AWS_SECRET_ACCESS_KEY:
+  aws-secret-access-key:
     description: AWS Secret Access Key
     required: true
 runs:
