--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,10 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Deploy React App
-      uses: ./.github/actions/react-deploy
+      uses: ./.github/actions/react-deploy/
       with:
         node-version: 16  # Use the appropriate version for your project
-        s3-bucket: "waitlist-bucket"
+        s3-bucket: waitlist-bucket
       env:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
