added the inputs for aws

--- a/.github/actions/react-deploy/action.yml
+++ b/.github/actions/react-deploy/action.yml
@@ -14,6 +14,10 @@ inputs:
   aws-secret-access-key:
     description: AWS Secret Access Key
     required: true
+  aws-region:
+    description: AWS Region
+    required: true
+    default: "us-east-1"
 runs:
   using: composite
   steps:
@@ -32,6 +36,10 @@ runs:
     - name: Build React App
       shell: bash
       run: npm run build
+    
+    - name: Debug Environment
+      shell: bash
+      run: env
 
     - name: Deploy to s3
       shell: bash
