--- a/.github/actions/react-deploy/action.yml
+++ b/.github/actions/react-deploy/action.yml
@@ -46,8 +46,8 @@ runs:
       run: |
         aws s3 sync build/ s3://${{ inputs.s3-bucket }} --delete
       env:
-        AWS_ACCESS_KEY_ID: ${{ inputs.aws-access-key-id }}
-        AWS_SECRET_ACCESS_KEY: ${{ inputs.aws-secret-access-key }}
+        aws-access-key-id: ${{ inputs.aws-access-key-id }}
+        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
         AWS_REGION: "us-east-1"  # Replace with your region
 
 
