--- a/.github/actions/react-deploy/action.yml
+++ b/.github/actions/react-deploy/action.yml
@@ -48,6 +48,6 @@ runs:
       env:
         aws-access-key-id: ${{ inputs.aws-access-key-id }}
         aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
-        AWS_REGION: "us-east-1"  # Replace with your region
+        aws-region: "us-east-1"  # Replace with your region
 
 
