--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,8 @@ jobs:
     name: Build Project
     runs-on: ubuntu-latest
     steps: 
+      - name: Checkout Code
+        uses: actions/checkout@v3
       - name: Run Build
         uses: ./.github/actions/build
         with:
