--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
     steps: 
       - name: Checkout Code
         uses: actions/checkout@v3
+
       - name: Run Build
         uses: ./.github/actions/build
         with:
@@ -21,16 +22,18 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Download Build Artifacts
-      uses: actions/download-artifact@v3
-      with:
-        name: build
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build
 
-    - name: Run Deploy Composite Action
-      uses: ./.github/actions/deploy
-      with: 
-        bucket-name: "list-buckets"
+      - name: Run Deploy Composite Action
+        uses: ./.github/actions/deploy
+        with: 
+          bucket-name: "list-buckets"
 
     # - name: Configure AWS credentials
     #   uses: aws-actions/configure-aws-credentials@v3
