--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -4,14 +4,20 @@ inputs:
   bucket-name: 
     description: Name of the s3 bucket
     required: true
+  aws-access-key-id:
+    description: AWS access key ID
+    required: true
+  aws-secret-access-key:
+    description: AWS secret access key
+    required: true
 runs:
   using: "composite"
   steps:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{ secrets.aws-access-key-id }}
+        aws-secret-access-key: ${{ secrets.aws-secret-access-key }}
         aws-region: "us-east-1"
 
     - name: Download build artifacts
