--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,8 @@ jobs:
         uses: ./.github/actions/deploy
         with: 
           bucket-name: "list-buckets"
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     # - name: Configure AWS credentials
     #   uses: aws-actions/configure-aws-credentials@v3
