--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -27,7 +27,7 @@ runs:
 
     - name: sync to s3
       shell: bash
-      run: aws s3 sync ./build/ s3://${{ inputs.bucket-name}} --delete
+      run: aws s3 sync ./build s3://${{ inputs.bucket-name}} --delete
 
 
     
