--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -1,38 +1,38 @@
-name: Deploy
-description: composite action for deploying the nodejs App
-inputs:
-  bucket-name: 
-    description: Name of the s3 bucket
-    required: true
-  aws-access-key-id:
-    description: AWS access key ID
-    required: true
-  aws-secret-access-key:
-    description: AWS secret access key
-    required: true
-runs:
-  using: "composite"
-  steps:
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v3
-      with:
-        aws-access-key-id: ${{ inputs.aws-access-key-id }}
-        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
-        aws-region: "us-east-1"
+# name: Deploy
+# description: composite action for deploying the nodejs App
+# inputs:
+#   bucket-name: 
+#     description: Name of the s3 bucket
+#     required: true
+#   aws-access-key-id:
+#     description: AWS access key ID
+#     required: true
+#   aws-secret-access-key:
+#     description: AWS secret access key
+#     required: true
+# runs:
+#   using: "composite"
+#   steps:
+#     - name: Configure AWS credentials
+#       uses: aws-actions/configure-aws-credentials@v3
+#       with:
+#         aws-access-key-id: ${{ inputs.aws-access-key-id }}
+#         aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+#         aws-region: "us-east-1"
 
-    - name: Download build artifacts
-      uses: actions/download-artifact@v3
-      with:
-        name: build
-        path: ./build
+#     - name: Download build artifacts
+#       uses: actions/download-artifact@v3
+#       with:
+#         name: build
+#         path: ./build
 
-    - name: Debug Artifact Contents
-      shell: bash
-      run: ls -la ./build
+#     - name: Debug Artifact Contents
+#       shell: bash
+#       run: ls -la ./build
 
-    - name: sync to s3
-      shell: bash
-      run: aws s3 sync ./build/ s3://${{ inputs.bucket-name}} --delete
+#     - name: sync to s3
+#       shell: bash
+#       run: aws s3 sync ./build/ s3://${{ inputs.bucket-name}} --delete
 
 
     
