--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,11 +12,13 @@ jobs:
     with:
       build-command: "npm run build"
       bucket-name: "nodejs-buckets"
-      cloudfront-distribution-id: "E3P7FXAOYKZDBU"
+      cloudfront-distribution-id: "E3P7FXAOYKZDBU" #ADDED THE ID
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       
+
+  
 
 
 
